k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-demo
  labels:
    name: cicd-demo
